Fix background-attachment on firefox

--- a/src/client/index.scss
+++ b/src/client/index.scss
@@ -7,7 +7,8 @@ html, body {
 }
 
 body {
-    background: #222 linear-gradient(
+    background-color: #252222;
+    background-image: linear-gradient(
         160deg,
         #282222 0%,
         #393232 25%,
@@ -16,6 +17,7 @@ body {
         #282222 75%,
         #393232 100%,
     );
+    background-attachment: fixed;
 
     font-family: "Maven Pro", "Helvetica", "Arial", sans-serif;
     font-size: 14pt;
